# rustaman

./: Cargo.toml  README.md  app.toml  diesel.toml  log4rs-local.yaml  log4rs.yaml
.github/workflows/: rust.yml
db/migrations/2023-04-09-160236_create_users/: up.sql
src/: lib.rs  main.rs  util.rs
src/config/: app_config.rs  app_config_loader.rs  mod.rs
src/db/: db_pool.rs  db_repository.rs  mod.rs  models.rs  schema.rs  user_repository.rs
src/monitoring/: mod.rs  monitoring_metrics.rs  monitoring_server.rs
src/web_server/: health_check.rs  mod.rs  user_endpoint.rs  web_server.rs  web_state.rs
