[package]
name = "rustaman"
version = "0.1.0"
edition = "2021"
description = "Just for ci test"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
env_logger = "0.9.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

