[package]
name = "rustaman"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7"
serde = "1"
serde_derive = "1"
log = "0.4"
log4rs = "1.2"
postgres = "0.19"
prometheus = { version = "0.13.1", features = ["process"] }
prometheus_exporter = "0.8.5"
ctrlc = "3.2.5"
crossbeam-channel = "0.5.7"
lazy_static = "1.4.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
